// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attaches parameters meta parameter: add only normal 1`] = `
Array [
  Object {
    "test": true,
  },
  Object {
    "extraMeta": "something meta",
  },
]
`;

exports[`attaches parameters meta parameter: adds nothing 1`] = `
Array [
  undefined,
  Object {
    "extraMeta": "something meta",
  },
]
`;

exports[`attaches parameters meta parameter: doesn't change the object 1`] = `
Object {
  "anotherFn": [Function],
}
`;

exports[`attaches parameters meta parameter: doesn't mess with first param 1`] = `
Array [
  Object {
    "boring": "test",
  },
  Object {
    "extraMeta": "something meta",
    "test": true,
  },
]
`;

exports[`attaches parameters meta parameter: gets appended to meta param 1`] = `
Array [
  undefined,
  Object {
    "extraMeta": "something meta",
    "test": true,
  },
]
`;

exports[`attaches parameters meta parameter: override meta param 1`] = `
Array [
  Object {
    "boring": "test",
  },
  Object {
    "extraMeta": "something meta",
  },
]
`;

exports[`attaches parameters multiple meta and normal parameters: add only normal 1`] = `
Array [
  Object {
    "test": true,
  },
  Object {
    "extraMeta": "be careful",
    "whatShouldIUse": "algolia",
  },
]
`;

exports[`attaches parameters multiple meta and normal parameters: adds nothing 1`] = `
Array [
  undefined,
  Object {
    "extraMeta": "be careful",
    "whatShouldIUse": "algolia",
  },
]
`;

exports[`attaches parameters multiple meta and normal parameters: doesn't change the object 1`] = `
Object {
  "anotherFn": [Function],
}
`;

exports[`attaches parameters multiple meta and normal parameters: doesn't mess with first param 1`] = `
Array [
  Object {
    "boring": "test",
  },
  Object {
    "extraMeta": "be careful",
    "test": true,
    "whatShouldIUse": "algolia",
  },
]
`;

exports[`attaches parameters multiple meta and normal parameters: gets appended to meta param 1`] = `
Array [
  undefined,
  Object {
    "extraMeta": "be careful",
    "test": true,
    "whatShouldIUse": "algolia",
  },
]
`;

exports[`attaches parameters multiple meta and normal parameters: override meta param 1`] = `
Array [
  Object {
    "boring": "test",
  },
  Object {
    "extraMeta": "be careful",
    "whatShouldIUse": "algolia",
  },
]
`;
